Homework3/app/security-groups.tf

# Nginx

resource "aws_security_group" "nginx_instnaces_access" {
  vpc_id = module.vpc_module_reut.vpc_id # you set : aws_vpc.reut_vpc.id . fixed. this is resouce that created in your module and not in your guest project. so you need to set it as module reffernce.
  name   = "nginx-access"

  tags = {
    Name = "nginx-sg-access"
  }
}

resource "aws_security_group_rule" "nginx_ssh_acess" {
  description       = "allow ssh access from anywhere"
  from_port         = 22
  protocol          = "tcp"
  security_group_id = aws_security_group.nginx_instnaces_access.id
  to_port           = 22
  type              = "ingress"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "nginx_http_acess" {
  description       = "allow http access from anywhere"
  from_port         = 80
  protocol          = "tcp"
  security_group_id = aws_security_group.nginx_instnaces_access.id
  to_port           = 80
  type              = "ingress"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "nginx_outbound_anywhere" {
  description       = "allow outbound traffic to anywhere"
  from_port         = 0
  protocol          = "-1"
  security_group_id = aws_security_group.nginx_instnaces_access.id
  to_port           = 0
  type              = "egress"
  cidr_blocks       = ["0.0.0.0/0"]
}

# DB

resource "aws_security_group" "DB_instnaces_access" {
  vpc_id = module.vpc_module_reut.vpc_id # you set : aws_vpc.reut_vpc.id . fixed. this is resouce that created in your module and not in your guest project. so you need to set it as module reffernce.
  name   = "DB-access"

  tags = {
    Name = "DB-sg-access"
  }
}

resource "aws_security_group_rule" "DB_outbound_anywhere" {
  description       = "allow outbound traffic to anywhere"
  from_port         = 0
  protocol          = "-1"
  security_group_id = aws_security_group.DB_instnaces_access.id
  to_port           = 0
  type              = "egress"
  cidr_blocks       = ["0.0.0.0/0"]
}
